# frida-core

./: meson.build
lib/agent/: agent.vala
lib/gadget/: gadget.vala
lib/interfaces/: session.vala
lib/payload/: base-agent-session.vala  meson.build  process.vala
portal/: meson.build  portal-glue.c  portal-glue.h  portal.vala
saucer/: frida-saucer.version  meson.build  post-process.sh  saucer-glue.c  saucer-glue.h  saucer.vala
src/: frida.vala  host-session-service.vala
src/darwin/: darwin-host-session.vala
src/droidy/: droidy-host-session.vala
src/fruity/: fruity-host-session.vala
src/linux/: linux-host-session.vala
src/qnx/: qnx-host-session.vala
src/socket/: socket-host-session.vala
src/windows/: windows-host-session.vala
tests/: test-host-session.vala
